; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_ov534_9.c_sccb_w_array.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_ov534_9.c_sccb_w_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gspca_dev*, [2 x i32]*, i32)* @sccb_w_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sccb_w_array(%struct.gspca_dev* %0, [2 x i32]* %1, i32 %2) #0 {
  %4 = alloca %struct.gspca_dev*, align 8
  %5 = alloca [2 x i32]*, align 8
  %6 = alloca i32, align 4
  store %struct.gspca_dev* %0, %struct.gspca_dev** %4, align 8
  store [2 x i32]* %1, [2 x i32]** %5, align 8
  store i32 %2, i32* %6, align 4
  br label %7

7:                                                ; preds = %33, %3
  %8 = load i32, i32* %6, align 4
  %9 = add nsw i32 %8, -1
  store i32 %9, i32* %6, align 4
  %10 = icmp sge i32 %9, 0
  br i1 %10, label %11, label %36

11:                                               ; preds = %7
  %12 = load [2 x i32]*, [2 x i32]** %5, align 8
  %13 = getelementptr inbounds [2 x i32], [2 x i32]* %12, i64 0, i64 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 255
  br i1 %15, label %16, label %25

16:                                               ; preds = %11
  %17 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %18 = load [2 x i32]*, [2 x i32]** %5, align 8
  %19 = getelementptr inbounds [2 x i32], [2 x i32]* %18, i64 0, i64 0
  %20 = load i32, i32* %19, align 4
  %21 = load [2 x i32]*, [2 x i32]** %5, align 8
  %22 = getelementptr inbounds [2 x i32], [2 x i32]* %21, i64 0, i64 1
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @sccb_write(%struct.gspca_dev* %17, i32 %20, i32 %23)
  br label %33

25:                                               ; preds = %11
  %26 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %27 = load [2 x i32]*, [2 x i32]** %5, align 8
  %28 = getelementptr inbounds [2 x i32], [2 x i32]* %27, i64 0, i64 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @sccb_read(%struct.gspca_dev* %26, i32 %29)
  %31 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %32 = call i32 @sccb_write(%struct.gspca_dev* %31, i32 255, i32 0)
  br label %33

33:                                               ; preds = %25, %16
  %34 = load [2 x i32]*, [2 x i32]** %5, align 8
  %35 = getelementptr inbounds [2 x i32], [2 x i32]* %34, i32 1
  store [2 x i32]* %35, [2 x i32]** %5, align 8
  br label %7

36:                                               ; preds = %7
  ret void
}

declare dso_local i32 @sccb_write(%struct.gspca_dev*, i32, i32) #1

declare dso_local i32 @sccb_read(%struct.gspca_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
